--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,12 @@
         }
     ],
     "require": {
+        "php": "^8.1",
         "guzzlehttp/guzzle": "^7.5",
-        "nyholm/psr7": "^1.6"
+        "nyholm/psr7": "^1.6",
+        "guzzlehttp/psr7": "^2.4",
+        "islambaraka90/pinecone-php-client": "^0.1.1",
+        "symfony/property-access": "^6.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.1"
